add metric