@@ -15,7 +15,7 @@ public class DeveloperRepo {
     private static final List<Developer> list = new ArrayList<>();
     static {
         list.add(new Developer()
-                .setId(UUID.randomUUID())
+                .setId(UUID.fromString("f427b5a9-f053-431b-93c0-cc9124f02bbe"))
                 .setFirstName("Петров")
                 .setLastName("Петр")
                 .setPatronymic("Петрович")
@@ -25,7 +25,7 @@ public class DeveloperRepo {
                 .setDaysWorkList(List.of(DaysWeek.MONDAY, DaysWeek.THURSDAY))
                 .setExperience(2));
         list.add(new Developer()
-                .setId(UUID.randomUUID())
+                .setId(UUID.fromString("caf2fbc8-76b3-421b-afbd-7ddf2e545abc"))
                 .setFirstName("Иванов")
                 .setLastName("Иван")
                 .setPatronymic("Иванович")
@@ -35,7 +35,7 @@ public class DeveloperRepo {
                 .setDaysWorkList(List.of(DaysWeek.TUESDAY, DaysWeek.WEDNESDAY))
                 .setExperience(2));
         list.add(new Developer()
-                .setId(UUID.randomUUID())
+                .setId(UUID.fromString("42022fb6-389d-432c-8a65-07320af362b7"))
                 .setFirstName("Сидоров")
                 .setLastName("Семен")
                 .setPatronymic("Семенович")
@@ -45,7 +45,7 @@ public class DeveloperRepo {
                 .setDaysWorkList(List.of(DaysWeek.MONDAY, DaysWeek.FRIDAY))
                 .setExperience(2));
         list.add(new Developer()
-                .setId(UUID.randomUUID())
+                .setId(UUID.fromString("f393d5ef-eac9-4014-b7e8-cd9217799285"))
                 .setFirstName("Васильев")
                 .setLastName("Василий")
                 .setPatronymic("Васильевич")
@@ -55,7 +55,7 @@ public class DeveloperRepo {
                 .setDaysWorkList(List.of(DaysWeek.TUESDAY, DaysWeek.FRIDAY))
                 .setExperience(2));
         list.add(new Developer()
-                .setId(UUID.randomUUID())
+                .setId(UUID.fromString("433c9b18-f9fc-4ab2-a783-63e34fdda14e"))
                 .setFirstName("Качанов")
                 .setLastName("Александр")
                 .setPatronymic("Петрович")
@@ -65,7 +65,7 @@ public class DeveloperRepo {
                 .setDaysWorkList(List.of(DaysWeek.WEDNESDAY, DaysWeek.THURSDAY))
                 .setExperience(2));
         list.add(new Developer()
-                .setId(UUID.randomUUID())
+                .setId(UUID.fromString("7c1e69ee-c70d-40e2-be6f-224001d70c90"))
                 .setFirstName("Сум")
                 .setLastName("Семен")
                 .setPatronymic("Петрович")
@@ -75,7 +75,7 @@ public class DeveloperRepo {
                 .setDaysWorkList(List.of(DaysWeek.MONDAY, DaysWeek.WEDNESDAY))
                 .setExperience(5));
         list.add(new Developer()
-                .setId(UUID.randomUUID())
+                .setId(UUID.fromString("e6fd6e57-e9a8-4906-a093-2c9923870574"))
                 .setFirstName("Рыжков")
                 .setLastName("Павел")
                 .setPatronymic("Васильевич")
@@ -85,7 +85,7 @@ public class DeveloperRepo {
                 .setDaysWorkList(List.of(DaysWeek.WEDNESDAY, DaysWeek.FRIDAY))
                 .setExperience(2));
         list.add(new Developer()
-                .setId(UUID.randomUUID())
+                .setId(UUID.fromString("f85d76e9-0657-4c43-8a8e-05103e18efe8"))
                 .setFirstName("Капустин")
                 .setLastName("Петр")
                 .setPatronymic("Михайлович")
@@ -95,7 +95,7 @@ public class DeveloperRepo {
                 .setDaysWorkList(List.of(DaysWeek.MONDAY, DaysWeek.THURSDAY))
                 .setExperience(2));
         list.add(new Developer()
-                .setId(UUID.randomUUID())
+                .setId(UUID.fromString("459f0781-2032-4dab-8234-861f66c6a415"))
                 .setFirstName("Александров")
                 .setLastName("Василий")
                 .setPatronymic("Сергеевич")
@@ -105,9 +105,9 @@ public class DeveloperRepo {
                 .setDaysWorkList(List.of(DaysWeek.WEDNESDAY, DaysWeek.FRIDAY))
                 .setExperience(6));
         list.add(new Developer()
-                .setId(UUID.randomUUID())
+                .setId(UUID.fromString("d519ace9-1ac2-48fb-9efa-5a132f0accba"))
                 .setFirstName("Алик")
-                .setLastName("Семен")
+                .setLastName("Дмитрий")
                 .setPatronymic("Михайлович")
                 .setAge(55)
                 .setPosition("boss")
@@ -115,7 +115,7 @@ public class DeveloperRepo {
                 .setDaysWorkList(List.of(DaysWeek.MONDAY, DaysWeek.THURSDAY))
                 .setExperience(2));
         list.add(new Developer()
-                .setId(UUID.randomUUID())
+                .setId(UUID.fromString("5de4ba14-50cc-4ff3-b035-218ff6c4b094"))
                 .setFirstName("Лука")
                 .setLastName("Александр")
                 .setPatronymic("Грыгорыч")
@@ -125,7 +125,7 @@ public class DeveloperRepo {
                 .setDaysWorkList(List.of(DaysWeek.MONDAY))
                 .setExperience(44));
         list.add(new Developer()
-                .setId(UUID.randomUUID())
+                .setId(UUID.fromString("3bc65868-b5c2-4b0f-9357-b6d1fbc3f881"))
                 .setFirstName("Пу")
                 .setLastName("Володя")
                 .setPatronymic("Петрович")
@@ -135,7 +135,7 @@ public class DeveloperRepo {
                 .setDaysWorkList(List.of(DaysWeek.TUESDAY))
                 .setExperience(3));
         list.add(new Developer()
-                .setId(UUID.randomUUID())
+                .setId(UUID.fromString("47b6b1b3-33c2-4cb9-a7db-9fb42f0a9953"))
                 .setFirstName("Синий")
                 .setLastName("Александр")
                 .setPatronymic("Владимирович")
@@ -144,8 +144,6 @@ public class DeveloperRepo {
                 .setStack(List.of(("java, spring")))
                 .setDaysWorkList(List.of(DaysWeek.WEDNESDAY, DaysWeek.THURSDAY))
                 .setExperience(4));
-
-
     }
 
     public List<Developer> addDeveloper(Developer developer) {
@@ -160,7 +158,7 @@ public class DeveloperRepo {
     public List<Developer> getDevelopersDays(DaysWeek daysWeek) {
         return list.stream()
                 .filter(dev -> dev.getDaysWorkList().contains(daysWeek))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Developer getDeveloperById(UUID uuid) {
